# KodeCamp-task-grader

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
task_grader/agent/: convert_colab_to_txt.py  grade_specific_task.py  task_grading_setup.py  task_submissions.py
task_grader/agent/utils/: __init__.py  grade_specific_task.py  sandbox.py  task_grading_setup.py  task_submissions.py
task_grader/docs/: __init__.py  factory.py  generic.py  github_repo.py  google_colab.py  google_docs.py  google_drive.py
task_grader/grading/: __init__.py  evaluator.py  prompt_builder.py  rubric.py
task_grader/grading/prompt_templates/: grading_prompt_template.txt
task_grader/lms/: __init__.py  lms_client.py
tests/: test_google_docs_downloader.py  test_lms_client.py  test_prompt_builder.py  test_rubric.py  test_submission_downloader_factory.py
