[tool.uv]
link-mode = "copy"

[project]
name = "task-grader"
version = "0.1.0"
description = "CLI + agentic grader/evaluator for KodeCamp promotional tasks"
authors = [{ name = "Anthony Okoro", email = "antoine.okoro@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.5",
    "langchain-groq>=1.0.0",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.3",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0",
    "requests>=2.32.0",
    "typer>=0.12.0",
]

[project.scripts]
task-grader = "task_grader.cli:app"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.18.2",
    "pre-commit>=4.4.0",
    "pytest>=9.0.1",
    "ruff>=0.14.4",
    "setuptools>=80.9.0",
    "types-requests>=2.32.4.20250913",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["task_grader"]
